# Explosive-Chaos-Jinx-s-Playthings

./: .gitignore  README.md
code/release/: install.txt
code/source/: CMakeLists.txt  build.bat  build.txt
code/source/arcane_loot/: CMakeLists.txt
code/source/arcane_loot/src/: main.cpp  procedural_texture.cpp  procedural_texture.hpp  scene.cpp  scene.hpp
code/source/arcane_loot/src/nodes/: cristal_ball_node.cpp  cristal_ball_node.hpp  normal_object_node.cpp  normal_object_node.hpp  object_node.cpp  object_node.hpp  skybox_node.cpp  skybox_node.hpp
code/source/assets/shaders/: blinn_mapping.frag  blinn_mapping.vert  blinnphong.frag  blinnphong.vert  cel.frag  cel.vert  shilhouette.frag  shilhouette.vert  skybox.frag  skybox.vert
code/source/engine/: CMakeLists.txt
code/source/engine/include/tangram/engine/: api.hpp
code/source/engine/include/tangram/engine/input/: input.hpp
code/source/engine/include/tangram/engine/rendering/: camera.hpp  color.hpp  graphics_api.hpp  image.hpp  light.hpp  material.hpp  model.hpp  noise.hpp  orbit_camera.hpp  procedural_textures.hpp  shader.hpp  texture.hpp  texture_description.hpp  vertex_layout.hpp
code/source/engine/include/tangram/engine/scene/: scene.hpp  scene_node.hpp  transform.hpp
code/source/engine/include/tangram/engine/window/: window.hpp
code/source/engine/src/rendering/: camera.cpp  color.cpp  graphics_api.cpp  image.cpp  model.cpp  noise.cpp  orbit_camera.cpp  procedural_textures.cpp  shader.cpp  texture.cpp  texture_description.cpp  vertex_layout.cpp
code/source/engine/src/rendering/opengl/: graphics_api.cpp  graphics_api.hpp  index_buffer.cpp  index_buffer.hpp  shader.cpp  shader.hpp  shader_program.cpp  shader_program.hpp  texture.cpp  texture.hpp  uniform_buffer.cpp  uniform_buffer.hpp  vertex_array.cpp  vertex_array.hpp  vertex_buffer.cpp  vertex_buffer.hpp
code/source/engine/src/scene/: scene.cpp  scene_node.cpp  transform.cpp
code/source/engine/src/window/: glfw_window.cpp  glfw_window.hpp  window.cpp
